--- a/subfiles/part_04.tex
+++ b/subfiles/part_04.tex
@@ -9,14 +9,14 @@ In the last two sections, we showed how to construct a generative model with a v
 As before, let us consider a flow model given by
 \begin{align}
 \label{eq:ode_model}
- X_0&\sim\pinit,\quad \dd X_t = u_t^\theta(X_t)\,\dd t. &&\blacktriangleright\,\,\text{flow model}
+ X_0&\sim\pinit,\quad \dd X_t = u_t^\theta(X_t)\,\dd t. &&\blacktriangleright\,\,\text{flow model/流模型}
 \end{align}
 As we learned, we want the neural network $u_t^\theta$ to equal the marginal vector field $\uref_t$. In other words, we would like to find parameters $\theta$ so that $u_t^\theta\approx \uref_t$. In the following, we denote by $\text{Unif}=\text{Unif}_{[0,1]}$ the uniform distribution on the interval $[0,1]$, and by $\mathbb{E}$ the expected value of a random variable. An intuitive way of obtaining $u_t^\theta\approx \uref_t$ is to use a mean-squared error, i.e. to use the \themebf{flow matching loss} defined as
 
 如前所述，让我们考虑一个由下式给出的流模型：
 \begin{align}
 \label{eq:ode_model}
- X_0&\sim\pinit,\quad \dd X_t = u_t^\theta(X_t)\,\dd t. &&\blacktriangleright\,\,\text{flow model}
+ X_0&\sim\pinit,\quad \dd X_t = u_t^\theta(X_t)\,\dd t. &&\blacktriangleright\,\,\text{flow model/流模型}
 \end{align}
 正如我们所学的，我们希望神经网络 $u_t^\theta$ 等于边际向量场 $\uref_t$。换句话说，我们希望找到参数 $\theta$ 使得 $u_t^\theta\approx \uref_t$。在下文中，我们用 $\text{Unif}=\text{Unif}_{[0,1]}$ 表示区间 $[0,1]$ 上的均匀分布，用 $\mathbb{E}$ 表示随机变量的期望值。获得 $u_t^\theta\approx \uref_t$ 的一种直观方法是使用均方误差，即使用定义为下式的\themebf{流匹配损失（flow matching loss）}：
 \label{subsec:training_algorithm}
@@ -37,6 +37,7 @@ we cannot compute it efficiently because the above integral is intractable. Inst
     \uref_t(x) = \int \uref_t(x|z)\frac{ p_t(x|z)\pdata(z)}{p_t(x)}\dd z,
 \end{align}
 但我们无法有效地计算它，因为上述积分是难以处理的。相反，我们将利用\themebf{条件}速度场 $\uref_t(x|z)$ 是可处理的这一事实。 
+
 To do so, let us define the \themebf{conditional flow matching loss} 
 \begin{align}
 \label{eq:cfm}
@@ -54,14 +55,24 @@ Note the difference to     \cref{eq:marginal_loss_function}: we use the conditio
 \begin{theorem}
 \label{thm:fm_loss} 
 The marginal flow matching loss equals the conditional flow matching loss up to a constant. That is,
+
+边际流匹配损失等于条件流匹配损失加上一个常数。即，
+
 \begin{align*}
 \Lmarg(\theta) = \Lcond(\theta) + C,
 \end{align*}
+
 where $C$ is independent of $\theta$. Therefore, their gradients coincide:
+
+其中 $C$ 与 $\theta$ 无关。因此，它们的梯度重合：
+
 \begin{align*}
 \nabla_\theta \Lmarg(\theta) = \nabla_\theta \Lcond(\theta).
 \end{align*}
+
 Hence, minimizing $\Lcond(\theta)$ with e.g., stochastic gradient descent (SGD) is equivalent to minimizing $\Lmarg(\theta)$ with in the same fashion. In particular, for the minimizer $\theta^*$ of $\Lcond(\theta)$, it will hold that $u_t^{\theta^*}=\uref_t$ (assuming an infintely expressive parameterization). 
+
+因此，使用例如随机梯度下降（SGD）最小化 $\Lcond(\theta)$ 等价于以同样的方式最小化 $\Lmarg(\theta)$。特别地，对于 $\Lcond(\theta)$ 的最小化器 $\theta^*$，将有 $u_t^{\theta^*}=\uref_t$（假设具有无限表达能力的参数化）。
 \end{theorem}
 \begin{proof}
 The proof works by expanding the mean-squared error into three components and removing constants:
@@ -100,6 +111,7 @@ where in $(i)$ we plugged in the derived equation, in $(ii)$ we added and subtra
 \end{proof}
 
 其中在 $(i)$ 中我们代入了推导的方程，在 $(ii)$ 中我们加上并减去相同的值，在 $(iii)$ 中我们再次使用了公式 $\|a-b\|^2=\|a\|^2-2a^Tb+\|b\|^2$，在 $(iv)$ 中我们定义了一个关于 $\theta$ 的常数。这完成了证明。
+
 Once $u_t^{\theta}$ has been trained, we may simulate the flow model
 \begin{align}
 \label{eq:sde_extension_restated}
@@ -157,17 +169,17 @@ Many famous state-of-the-art models have been trained using this simple yet effe
 许多著名的最先进模型都使用这种简单而有效的程序进行训练，例如\themeit{Stable Diffusion 3}、Meta的\themeit{Movie Gen Video}，以及可能还有许多其他专有模型。在\cref{fig:fm_illustration_checkerboard}中，我们在一个简单的例子中可视化了它，在\cref{alg:training_fm_score_matching_gaussian_paths}中我们总结了训练过程。
 \end{examplebox}
 \begin{algorithm}[h]
-\caption{Flow Matching Training Procedure (here for Gaussian CondOT path $p_t(x|z)=\mathcal{N}(tz,(1-t)^2)$)}
+\caption{Flow Matching Training Procedure (here for Gaussian CondOT path $p_t(x|z)=\mathcal{N}(tz,(1-t)^2)$) / 流匹配训练过程（此处针对高斯条件最优传输路径 $p_t(x|z)=\mathcal{N}(tz,(1-t)^2)$）}
 \label{alg:training_fm_score_matching_gaussian_paths}
 \begin{algorithmic}[1]
-\REQUIRE A dataset of samples $z\sim \pdata$, neural network $u_t^\theta$
-\FOR{each mini-batch of data}
-    \STATE Sample a data example $\dap$ from the dataset.
-    \STATE Sample a random time $t \sim \text{Unif}_{[0,1]}$.
-    \STATE Sample noise $\epsilon\sim\mathcal{N}(0,I_d)$
-    \STATE Set $x=t z + (1-t) \epsilon$\hfill (\text{General case: }$x\sim p_t(\cdot|z)$)
+\REQUIRE A dataset of samples $z\sim \pdata$, neural network $u_t^\theta$ / 样本数据集 $z\sim \pdata$，神经网络 $u_t^\theta$
+\FOR{each mini-batch of data / 对于每个数据小批次}
+    \STATE Sample a data example $\dap$ from the dataset. / 从数据集中采样一个数据样本 $\dap$。
+    \STATE Sample a random time $t \sim \text{Unif}_{[0,1]}$. / 采样一个随机时间 $t \sim \text{Unif}_{[0,1]}$。
+    \STATE Sample noise $\epsilon\sim\mathcal{N}(0,I_d)$ / 采样噪声 $\epsilon\sim\mathcal{N}(0,I_d)$
+    \STATE Set $x=t z + (1-t) \epsilon$\hfill (\text{General case: }$x\sim p_t(\cdot|z)$) / 设置 $x=t z + (1-t) \epsilon$\hfill （一般情况：$x\sim p_t(\cdot|z)$）
     %\IF{Flow matching}
-    \STATE Compute loss
+    \STATE Compute loss / 计算损失
     \begin{align*}
         \mathcal{L}(\theta) =& \|u_t^\theta(x)-(z-\epsilon)\|^2 \quad &(\text{General case: }=\|u_t^\theta(x)-\uref_t(x|z)\|^2)
     \end{align*}
@@ -178,12 +190,10 @@ Many famous state-of-the-art models have been trained using this simple yet effe
     %     \mathcal{L}(\theta) =& \|s_t^\theta(x_t)+\frac{\epsilon}{\beta_t}\|^2 \quad &(\text{General case: }=\|s_t^\theta(x_t)+\nabla\log p_t(x_t|z)\|^2)
     % \end{align*}
     % \ENDIF
-    \STATE Update the model parameters $\theta$ via gradient descent on $\mathcal{L}(\theta)$.
+    \STATE Update the model parameters $\theta$ via gradient descent on $\mathcal{L}(\theta)$. / 通过对 $\mathcal{L}(\theta)$ 进行梯度下降来更新模型参数 $\theta$。
 \ENDFOR
 \end{algorithmic}
 \end{algorithm}
-
-流匹配训练过程（此处针对高斯 CondOT 路径 $p_t(x|z)=\mathcal{N}(tz,(1-t)^2)$）
 
 输入：来自 $\pdata$ 的样本数据集 $z$，神经网络 $u_t^\theta$
 对于每个数据小批次：
@@ -243,8 +253,8 @@ To approximate the marginal score $\nabla\log p_t$, we can use a neural network 
 \end{align}
 为了近似边际分数 $\nabla\log p_t$，我们可以使用一个神经网络，我们称之为\themebf{分数网络} $s_t^\theta:\mathbb{R}^d\times[0,1]\to\mathbb{R}^d$。与之前相同的方式，我们可以设计一个\themebf{分数匹配}损失和一个\themebf{条件分数匹配}损失：
 \begin{align*}
-    \mathcal{L}_{\text{SM}}(\theta) &=\mathbb{E}_{t\sim\text{Unif},z\sim \pdata, x\sim p_t(\cdot|\dap)}[\|s_t^\theta(x) - \nabla\log p_t(x)\|^2] &&\blacktriangleright\,\,\text{score matching loss}\\
-    \mathcal{L}_{\text{CSM}}(\theta) &=\mathbb{E}_{t\sim\text{Unif},z\sim \pdata, x\sim p_t(\cdot|\dap)}[\|s_t^\theta(x) - \nabla\log p_t(x|\dap)\|^2]  &&\blacktriangleright\,\,\text{conditional score matching loss}
+    \mathcal{L}_{\text{SM}}(\theta) &=\mathbb{E}_{t\sim\text{Unif},z\sim \pdata, x\sim p_t(\cdot|\dap)}[\|s_t^\theta(x) - \nabla\log p_t(x)\|^2] &&\blacktriangleright\,\,\text{score matching loss/分数匹配损失}\\
+    \mathcal{L}_{\text{CSM}}(\theta) &=\mathbb{E}_{t\sim\text{Unif},z\sim \pdata, x\sim p_t(\cdot|\dap)}[\|s_t^\theta(x) - \nabla\log p_t(x|\dap)\|^2]  &&\blacktriangleright\,\,\text{conditional score matching loss/条件分数匹配损失}
 \end{align*}
 where again the difference is using the marginal score $\nabla\log p_t(x)$ vs. using the conditional score $\nabla\log p_t(x|z)$. %\footnote{It would be more consistent to call it \emph{conditional} score matching loss but \emph{denoising} score matching is a term used in the literature. We will realize later why it is called \emph{denoising} score matching.} 
 As before, we ideally would want to minimize the score matching loss but can't because we don't know $\nabla\log p_t(x)$. But similarly as before, the conditional score matching loss is a tractable alternative:
@@ -253,31 +263,39 @@ As before, we ideally would want to minimize the score matching loss but can't b
 \begin{theorem}
 \label{thm:dsm_loss}
 The score matching loss equals the conditional score matching loss up to a constant:
+
+得分匹配损失等于条件得分匹配损失加上一个常数：
+
 \begin{align*}
 \mathcal{L}_{\text{SM}}(\theta) = \mathcal{L}_{\text{CSM}}(\theta) + C,
 \end{align*}
+
 where $C$ is independent of parameters $\theta$. Therefore, their gradients coincide:
+
+其中 $C$ 与参数 $\theta$ 无关。因此，它们的梯度重合：
+
 \begin{align*}
 \nabla_\theta \mathcal{L}_{\text{SM}}(\theta) = \nabla_\theta \mathcal{L}_{\text{CSM}}(\theta).
 \end{align*}
+
 In particular, for the minimizer $\theta^*$, it will hold that $s_t^{\theta^*}=\nabla\log p_t$. 
+
+特别地，对于最小化器 $\theta^*$，将有 $s_t^{\theta^*}=\nabla\log p_t$。
 \end{theorem}
 \begin{proof}
 Note that the formula for $\nabla\log p_t$ (\cref{eq:score_marginal_restated}) looks the same as the formula for $\uref_t$ (\cref{eq:marginal_vector_field_stated_again}). Therefore, the proof is identical to the proof of \cref{thm:fm_loss} replacing $\uref_t$ with $\nabla\log p_t$.
+
+注意 $\nabla\log p_t$ 的公式（\cref{eq:score_marginal_restated}）与 $\uref_t$ 的公式（\cref{eq:marginal_vector_field_stated_again}）看起来相同。因此，证明与 \cref{thm:fm_loss} 的证明相同，只需将 $\uref_t$ 替换为 $\nabla\log p_t$。
 \end{proof}
+
 The above procedure describes the vanilla procedure of training a diffusion model. After training, we can choose an arbitrary diffusion coefficient $\sigma_t\geq 0$ and then simulate the SDE
-\begin{align}
-\label{eq:sde_extension_restated}
-    X_0\sim&\pinit,\quad \dd X_t =\left[u_t^\theta(X_t)+\frac{\sigma_t^2}{2}s_t^\theta(X_t)\right]\dd t +\sigma_t\dd W_t,
-\end{align}
-to generate samples $X_1\sim\pdata$. In theory, every $\sigma_t$ should give samples $X_1\sim \pdata$ at perfect training. In practice, we encounter two types of errors: (1) numerical errors by simulating the SDE imperfectly and (2) training errors (i.e., the model $u_t^{\theta}$ is not exactly equal to $\uref_t$). Therefore, there is an optimal unknown noise level $\sigma_t$ - this can be determined empirically by just testing our different values of empirically (see e.g. \citep{albergo2023stochastic,karras2022elucidating,ma2024sit}). At first sight, it might seem to be a disadvantage that we have to learn both $s_t^\theta$ and $u_t^\theta$ if we wanted to use diffusion model now as opposed to a flow model. However, note we can often directly $s_t^\theta$ and $u_t^\theta$ in a single network with two outputs, so that the additional computational effort is usually minimal. Further, as we will see now for the special case of the Gaussian probability path, $s_t^\theta$ and $u_t^\theta$ may be converted into one another so that we don't have to train them separately.
 
 上述过程描述了训练扩散模型的标准过程。训练后，我们可以选择任意扩散系数 $\sigma_t\geq 0$，然后模拟 SDE
 \begin{align}
 \label{eq:sde_extension_restated}
     X_0\sim&\pinit,\quad \dd X_t =\left[u_t^\theta(X_t)+\frac{\sigma_t^2}{2}s_t^\theta(X_t)\right]\dd t +\sigma_t\dd W_t,
 \end{align}
-来生成样本 $X_1\sim\pdata$。理论上，在完美训练下，每个 $\sigma_t$ 都应该给出样本 $X_1\sim \pdata$。在实践中，我们遇到两种类型的误差：(1) 通过不完美地模拟 SDE 产生的数值误差，以及 (2) 训练误差（即模型 $u_t^{\theta}$ 不完全等于 $\uref_t$）。因此，存在一个最优的未知噪声水平 $\sigma_t$ —— 这可以通过经验性地测试不同值来确定（例如参见 \citep{albergo2023stochastic,karras2022elucidating,ma2024sit}）。乍一看，如果我们现在想使用扩散模型而不是流模型，必须学习 $s_t^\theta$ 和 $u_t^\theta$ 似乎是一个缺点。然而，注意我们通常可以在一个具有两个输出的单一网络中直接训练 $s_t^\theta$ 和 $u_t^\theta$，因此额外的计算开销通常是最小的。此外，正如我们现在将看到的，对于高斯概率路径的特殊情况，$s_t^\theta$ 和 $u_t^\theta$ 可以相互转换，因此我们不必单独训练它们。
+to generate samples $X_1\sim\pdata$. In theory, every $\sigma_t$ should give samples $X_1\sim \pdata$ at perfect training. In practice, we encounter two types of errors: (1) numerical errors by simulating the SDE imperfectly and (2) training errors (i.e., the model $u_t^{\theta}$ is not exactly equal to $\uref_t$). Therefore, there is an optimal unknown noise level $\sigma_t$ - this can be determined empirically by just testing our different values of empirically (see e.g. \citep{albergo2023stochastic,karras2022elucidating,ma2024sit}). At first sight, it might seem to be a disadvantage that we have to learn both $s_t^\theta$ and $u_t^\theta$ if we wanted to use diffusion model now as opposed to a flow model. However, note we can often directly $s_t^\theta$ and $u_t^\theta$ in a single network with two outputs, so that the additional computational effort is usually minimal. Further, as we will see now for the special case of the Gaussian probability path, $s_t^\theta$ and $u_t^\theta$ may be converted into one another so that we don't have to train them separately.
 
 \begin{remarkbox}[Denoising Diffusion Models]If you are familiar with diffusion models, you have probably encountered the term \themebf{\textit{denoising} diffusion model}. This model has become so popular that most people nowadays drop the word "denoising" and simply use the term "diffusion model" to describe it. In the language of this document, these are simply diffusion models with Gaussian probability paths $p_t(\cdot|z)=\mathcal{N}(\alpha_t z;\beta_t^2 I_d)$. However, it is important to note that this might not be immediately obvious if you read some of the first diffusion model papers: they use a different time convention (time is inverted) - so you need apply an appropriate time re-scaling - and they construct their probability path via so-called \textbf{forward processes} (we will discuss this in \cref{subsec:guide_to_flow_matching_literature}).
 \end{remarkbox}
@@ -420,7 +438,7 @@ to obtain samples $X_1\sim \pdata$ (up to training and simulation error). This c
 % In other words, the best constant guess $v$ of $Z$ as measured by the mean-squared error is the expected value of $Z$. To see that the above holds, one can do the following calculation for an arbitrary $v$
 % \begin{align*}
 %     \mathbb{E}[\|Z-v\|^2] =& \mathbb{E}[\|(Z-\mathbb{E}[Z])+(\mathbb{E}[Z]-v)\|^2]\\
-% \overset{(i)}{=}&\mathbb{E}[\|Z-\mathbb{E}[Z]\|^2+2(Z-\mathbb{E}[Z])^T(\mathbb{E}[Z]-v)]+\|\mathbb{E}[Z]-v\|^2]\\
+% \overset{(i)}{=}&\mathbb{E}[\|Z-\mathbb{E}[Z]\|^2+2(Z-\mathbb{E}[Z])^T(\mathbb{E}[Z]-v)]+\|\mathbb{E}[Z]-v\|^2\\
 % \overset{(ii)}{=}&\mathbb{E}[\|Z-\mathbb{E}[Z]\|^2]+2(\mathbb{E}[Z]-\mathbb{E}[Z])^T(\mathbb{E}[Z]-v)+\|\mathbb{E}[Z]-v\|^2\\
 % =&\mathbb{E}[\|Z-\mathbb{E}[Z]\|^2]+\|\mathbb{E}[Z]-v)\|^2\\
 % \geq & \mathbb{E}[\|Z-\mathbb{E}[Z]\|^2]
@@ -442,8 +460,6 @@ to obtain samples $X_1\sim \pdata$ (up to training and simulation error). This c
 % \end{align*}
 % Note that the conditional expectation is a function of $x$. How would we approximate it?
 % Therefore, we learnt: \textbf{training a neural network by minimizing a mean squared error results in the neural network approximating the conditional expectation.}
-
-%\subsection{Training Algorithm}
 
 \subsection{A Guide to the  Diffusion Model Literature}
 \label{subsec:guide_to_flow_matching_literature}
@@ -496,88 +512,4 @@ As $u_t(X_t)=a_tX_t$, the above corresponds to a specific instance of training t
 % \end{align}
 % By the conditions we imposed on $I,\gamma$, we know that $p_t,p_t(\cdot|z)$ are valid interpolating conditional/marginal probability paths.
 
-Let us summarize the results of this section:
-
-让我们总结本节的结果：
-\begin{summarybox}[Training the Generative Model]
-\themebf{Flow matching} consists of training a neural network $u_t^\theta$ via minimizing the \themebf{conditional flow matching loss}
-
-\themebf{流匹配}包括通过最小化\themebf{条件流匹配损失}来训练神经网络 $u_t^\theta$
-\begin{align}
-\Lcond(\theta) =     \mathbb{E}_{z\sim \pdata, t\sim \text{Unif},\,x\sim p_t(\cdot|\dap)}[\|u_t^\theta(x) - \uref_t(x|\dap)\|^2]\quad &(\text{conditional flow matching loss})
-\end{align}
-where $\uref_t(x|z)$ is the conditional vector field (see \cref{alg:training_fm_score_matching_gaussian_paths}). After training, one generates samples by simulating the corresponding ODE (see \cref{alg:sampling_flow_model}). To extend this to a diffusion model, we can use a \themebf{score network} $s_t^\theta$ and train it via \themebf{conditional score matching}
-
-其中 $\uref_t(x|z)$ 是条件向量场（见\cref{alg:training_fm_score_matching_gaussian_paths}）。训练后，通过模拟相应的ODE生成样本（见\cref{alg:sampling_flow_model}）。为了将其扩展到扩散模型，我们可以使用\themebf{分数网络} $s_t^\theta$ 并通过\themebf{条件分数匹配}训练它
-\begin{align}
-    \label{eq:dsm}
-    \mathcal{L}_{\text{CSM}}(\theta) &= \mathbb{E}_{z\sim \pdata, \,t\sim \text{Unif},\,x\sim p_t(\cdot|\dap)}[\|s_t^\theta(x) - \nabla\log p_t(x|\dap)\|^2] \quad &(\text{denoising score matching loss})
-\end{align}
-For every diffusion coefficient $\sigma_t\geq 0$, simulating the SDE (e.g. via \cref{alg:sampling_diffusion_model})
-
-对于每个扩散系数 $\sigma_t\geq 0$，模拟SDE（例如通过\cref{alg:sampling_diffusion_model}）
-\begin{align}
-\label{eq:sde_sampling_restated_again}
-    X_0\sim&\pinit,\quad \dd X_t =\left[u_t^\theta(X_t)+\frac{\sigma_t^2}{2}s_t^\theta(X_t)\right]\dd t +\sigma_t\dd W_t
-\end{align}
-will result in generating approximate samples from $\pdata$. One can empirically find the optimal $\sigma_t\geq 0$.\\
-
-将导致生成来自 $\pdata$ 的近似样本。可以经验性地找到最优的 $\sigma_t\geq 0$。\\
-
-\paragraph{Gaussian probability paths.} For the special case of a Gaussian probability path $p_t(x|z)=\mathcal{N}(x;\alpha_tz,\beta_t^2I_d)$, the conditional score matching is also called \themebf{denoising score matching}. This loss and conditional flow matching loss are then given by:
-
-对于高斯概率路径 $p_t(x|z)=\mathcal{N}(x;\alpha_tz,\beta_t^2I_d)$ 的特殊情况，条件分数匹配也被称为\themebf{去噪分数匹配}。此时的损失和条件流匹配损失由以下给出：
-\begin{align*}
-        \mathcal{L}_{\text{CFM}}(\theta) =&\mathbb{E}_{t\sim\Unif,z\sim \pdata, \epsilon\sim \mathcal{N}(0,I_d)}[\|u_t^\theta(\alpha_tz+\beta_t\epsilon)-(\dot{\alpha}_tz+\dot{\beta}_t\epsilon)\|^2]\\
-        \mathcal{L}_{\text{CSM}}(\theta)=&\mathbb{E}_{t\sim\Unif,z\sim \pdata, \epsilon\sim \mathcal{N}(0,I_d)}[\|s_t^\theta(\alpha_tz+\beta_t\epsilon)+\frac{\epsilon}{\beta_t}\|^2]
-\end{align*}
-In this case, there is no need to train $s_t^\theta$ and $u_t^\theta$ separately as we can convert them post training via the formula:
-
-在这种情况下，不需要分别训练 $s_t^\theta$ 和 $u_t^\theta$，因为我们可以在训练后通过公式转换它们：
-\begin{align*}
-u_t^\theta(x)=&\left(\beta_t^2\frac{\dot{\alpha}_t}{\alpha_t}-\dot{\beta}_t\beta_t\right) s_t^\theta(x)+\frac{\dot{\alpha}_t}{\alpha_t}x
-\end{align*}
-Also here, after training we can simulate the SDE in \cref{eq:sde_sampling_restated_again} via \cref{alg:sampling_diffusion_model} to obtain samples $X_1$.\\
-
-在这里，训练后我们可以通过\cref{alg:sampling_diffusion_model}模拟\cref{eq:sde_sampling_restated_again}中的SDE以获得样本 $X_1$。\\
-
-\paragraph{Denoising diffusion models.} 
-Denoising diffusion models are diffusion models with Gaussian probability paths. For this reason, it is sufficient for them to learn either $u_t^\theta$ or $s_t^\theta$ as they can be converted into one another. While flow matching only allows for a simulation procedure that is deterministic via ODE, they allow for a simulation that is deterministic (probability flow ODE) or stochastic (SDE sampling). However, unlike flow matching or stochastic interpolants that allow to convert arbitrary distributions $\pinit$ into arbitrary distributions $\pdata$ via arbitrary probability paths $p_t$, denoising diffusion models only works for Gaussian initial distributions $\pinit=\mathcal{N}(0,I_d)$ and a Gaussian probability path.\\
-
-去噪扩散模型是具有高斯概率路径的扩散模型。因此，它们只需要学习 $u_t^\theta$ 或 $s_t^\theta$ 中的一个就足够了，因为它们可以相互转换。虽然流匹配只允许通过ODE进行确定性的模拟程序，但它们允许确定性（概率流ODE）或随机（SDE采样）的模拟。然而，与流匹配或随机插值不同（允许通过任意概率路径 $p_t$ 将任意分布 $\pinit$ 转换为任意分布 $\pdata$），去噪扩散模型只适用于高斯初始分布 $\pinit=\mathcal{N}(0,I_d)$ 和高斯概率路径。\\
-
-\paragraph{Literature} Alternative formulations for diffusion models that are popular in the literature are:
-
-文献中流行的扩散模型的替代表述包括：
-\begin{enumerate}
-    \item \textbf{\sffamily Discrete-time: }Approximations of SDEs via discrete-time Markov chains are often used.
-    
-    \textbf{\sffamily 离散时间：}经常使用通过离散时间马尔可夫链对SDE的近似。
-    \item \textbf{\sffamily Inverted time convention: }It is popular to use an inverted time convention where $t=0$ corresponds to $\pdata$ (as opposed to here where $t=0$ corresponds to $\pinit$).
-    
-    \textbf{\sffamily 倒转时间约定：}使用倒转时间约定很流行，其中 $t=0$ 对应于 $\pdata$（与这里 $t=0$ 对应于 $\pinit$ 相反）。
-    \item \textbf{\sffamily Forward process: }Forward processes (or noising processes) are ways of constructing (Gaussian) probability paths.
-    
-    \textbf{\sffamily 前向过程：}前向过程（或噪声过程）是构造（高斯）概率路径的方法。
-    \item \textbf{\sffamily Training target via time-reversal:} A training target can also be  constructed via the time-reversal of SDEs. This is a specific instance of the construction presented here (with an inverted time convention).
-    
-    \textbf{\sffamily 通过时间倒转的训练目标：}训练目标也可以通过SDE的时间倒转来构造。这是这里呈现的构造的一个特定实例（使用倒转时间约定）。
-\end{enumerate}
-\end{summarybox}
-% \paragraph{Adding noise to data.}
-
-% \paragraph{Frame as probability path.}
-
-% \paragraph{How do I go the other way?} Transport mass - using Fokker-Planck equation.
-
-% \paragraph{Weak time-reversal.} Probability flow ODE.
-
-% \paragraph{Adding Langevin dynamics.}
-
-% \paragraph{Special case: Proper time-reversal.}
-
-% \paragraph{Specify marginals via an SDE.} Example of Ohrnstein-Uhlenbeck process.
-
-% Instantaneous Change of Variables (evaluating log-likelihood).
-% Deterministic sampling. Stochastic sampling:
-% Linear ODEs, SDEs with affine drift coefficients, Time-reversal idea.
+\end{document}
